<resources>
    <string name="app_name">Draw it if you can</string>
    <string name="clear">Clear</string>
    <string name="quest_p1">Draw</string>
    <string name="quest_p2">in under 20 seconds</string>
    <string name="start_text">Can a neural network learn to recognize doodling?</string>
    <string name="start_button">Let`s go!</string>
    <string name="succ_title">I know!</string>
    <string name="succ_text">It`s a</string>
    <string name="succ_next">Let\'s next!</string>
    <string name="btn_next">Next</string>
    <string name="btn_cancel">Enough for today</string>
    <string name="dlg_repeat">Do you want to repeat it?</string>
    <string name="btnStart">Start</string>
    <string name="analyticsId" translatable="false">UA-57285958-3</string>
    <string name="start_hint">Hint: Try to use the entire surface available for drawing.</string>
    <string name="btn_again">Again?</string>
    <string name="btn_endgame">Result</string>
<string name="label0">airplane</string>
<string name="label1">alarm clock</string>
<string name="label2">angel</string>
<string name="label3">ant</string>
<string name="label4">anvil</string>
<string name="label5">apple</string>
<string name="label6">arm</string>
<string name="label7">asparagus</string>
<string name="label8">axe</string>
<string name="label9">backpack</string>
<string name="label10">banana</string>
<string name="label11">bandage</string>
<string name="label12">barn</string>
<string name="label13">baseball bat</string>
<string name="label14">basket</string>
<string name="label15">bat</string>
<string name="label16">bathtub</string>
<string name="label17">bear</string>
<string name="label18">beard</string>
<string name="label19">bed</string>
<string name="label20">bee</string>
<string name="label21">belt</string>
<string name="label22">bench</string>
<string name="label23">bicycle</string>
<string name="label24">binoculars</string>
<string name="label25">bird</string>
<string name="label26">birthday cake</string>
<string name="label27">blueberry</string>
<string name="label28">book</string>
<string name="label29">boomerang</string>
<string name="label30">bottlecap</string>
<string name="label31">bowtie</string>
<string name="label32">bracelet</string>
<string name="label33">brain</string>
<string name="label34">bread</string>
<string name="label35">bridge</string>
<string name="label36">broccoli</string>
<string name="label37">broom</string>
<string name="label38">bucket</string>
<string name="label39">bulldozer</string>
<string name="label40">bus</string>
<string name="label41">bush</string>
<string name="label42">butterfly</string>
<string name="label43">cactus</string>
<string name="label44">cake</string>
<string name="label45">calculator</string>
<string name="label46">calendar</string>
<string name="label47">camel</string>
<string name="label48">camera</string>
<string name="label49">campfire</string>
<string name="label50">candle</string>
<string name="label51">cannon</string>
<string name="label52">canoe</string>
<string name="label53">car</string>
<string name="label54">carrot</string>
<string name="label55">castle</string>
<string name="label56">cat</string>
<string name="label57">ceiling fan</string>
<string name="label58">cello</string>
<string name="label59">cell phone</string>
<string name="label60">chair</string>
<string name="label61">chandelier</string>
<string name="label62">church</string>
<string name="label63">circle</string>
<string name="label64">clarinet</string>
<string name="label65">clock</string>
<string name="label66">cloud</string>
<string name="label67">compass</string>
<string name="label68">computer</string>
<string name="label69">cookie</string>
<string name="label70">couch</string>
<string name="label71">cow</string>
<string name="label72">crab</string>
<string name="label73">crocodile</string>
<string name="label74">crown</string>
<string name="label75">cruise ship</string>
<string name="label76">cup</string>
<string name="label77">diamond</string>
<string name="label78">dishwasher</string>
<string name="label79">dog</string>
<string name="label80">dolphin</string>
<string name="label81">donut</string>
<string name="label82">door</string>
<string name="label83">dragon</string>
<string name="label84">dresser</string>
<string name="label85">drums</string>
<string name="label86">duck</string>
<string name="label87">ear</string>
<string name="label88">elbow</string>
<string name="label89">elephant</string>
<string name="label90">envelope</string>
<string name="label91">eraser</string>
<string name="label92">eye</string>
<string name="label93">eyeglasses</string>
<string name="label94">face</string>
<string name="label95">feather</string>
<string name="label96">fence</string>
<string name="label97">finger</string>
<string name="label98">fire hydrant</string>
<string name="label99">fireplace</string>
<string name="label100">firetruck</string>
<string name="label101">fish</string>
<string name="label102">flamingo</string>
<string name="label103">flashlight</string>
<string name="label104">flip flops</string>
<string name="label105">floor lamp</string>
<string name="label106">flower</string>
<string name="label107">flying saucer</string>
<string name="label108">fork</string>
<string name="label109">frog</string>
<string name="label110">frying pan</string>
<string name="label111">garden</string>
<string name="label112">giraffe</string>
<string name="label113">grapes</string>
<string name="label114">grass</string>
<string name="label115">guitar</string>
<string name="label116">hamburger</string>
<string name="label117">hammer</string>
<string name="label118">hand</string>
<string name="label119">harp</string>
<string name="label120">hat</string>
<string name="label121">headphones</string>
<string name="label122">hedgehog</string>
<string name="label123">helicopter</string>
<string name="label124">helmet</string>
<string name="label125">hockey puck</string>
<string name="label126">hockey stick</string>
<string name="label127">horse</string>
<string name="label128">hot air balloon</string>
<string name="label129">hot dog</string>
<string name="label130">hourglass</string>
<string name="label131">house</string>
<string name="label132">house plant</string>
<string name="label133">hurricane</string>
<string name="label134">ice cream</string>
<string name="label135">jacket</string>
<string name="label136">jail</string>
<string name="label137">kangaroo</string>
<string name="label138">key</string>
<string name="label139">keyboard</string>
<string name="label140">knee</string>
<string name="label141">knife</string>
<string name="label142">ladder</string>
<string name="label143">laptop</string>
<string name="label144">leaf</string>
<string name="label145">leg</string>
<string name="label146">light bulb</string>
<string name="label147">lighter</string>
<string name="label148">lighthouse</string>
<string name="label149">lightning</string>
<string name="label150">lion</string>
<string name="label151">lipstick</string>
<string name="label152">lobster</string>
<string name="label153">lollipop</string>
<string name="label154">mailbox</string>
<string name="label155">megaphone</string>
<string name="label156">mermaid</string>
<string name="label157">microphone</string>
<string name="label158">microwave</string>
<string name="label159">monkey</string>
<string name="label160">moon</string>
<string name="label161">mosquito</string>
<string name="label162">motorbike</string>
<string name="label163">mountain</string>
<string name="label164">mouse</string>
<string name="label165">moustache</string>
<string name="label166">mouth</string>
<string name="label167">mushroom</string>
<string name="label168">necklace</string>
<string name="label169">nose</string>
<string name="label170">octopus</string>
<string name="label171">onion</string>
<string name="label172">owl</string>
<string name="label173">paintbrush</string>
<string name="label174">paint can</string>
<string name="label175">palm tree</string>
<string name="label176">panda</string>
<string name="label177">pants</string>
<string name="label178">paper clip</string>
<string name="label179">parachute</string>
<string name="label180">parrot</string>
<string name="label181">passport</string>
<string name="label182">peanut</string>
<string name="label183">pear</string>
<string name="label184">peas</string>
<string name="label185">pencil</string>
<string name="label186">penguin</string>
<string name="label187">piano</string>
<string name="label188">pig</string>
<string name="label189">pillow</string>
<string name="label190">pineapple</string>
<string name="label191">pizza</string>
<string name="label192">pool</string>
<string name="label193">popsicle</string>
<string name="label194">postcard</string>
<string name="label195">potato</string>
<string name="label196">rabbit</string>
<string name="label197">raccoon</string>
<string name="label198">radio</string>
<string name="label199">rainbow</string>
<string name="label200">rhinoceros</string>
<string name="label201">rifle</string>
<string name="label202">roller coaster</string>
<string name="label203">rollerskates</string>
<string name="label204">sailboat</string>
<string name="label205">sandwich</string>
<string name="label206">saw</string>
<string name="label207">saxophone</string>
<string name="label208">scissors</string>
<string name="label209">scorpion</string>
<string name="label210">sea turtle</string>
<string name="label211">seesaw</string>
<string name="label212">shark</string>
<string name="label213">sheep</string>
<string name="label214">shoe</string>
<string name="label215">shorts</string>
<string name="label216">shovel</string>
<string name="label217">sink</string>
<string name="label218">skateboard</string>
<string name="label219">skull</string>
<string name="label220">skyscraper</string>
<string name="label221">snail</string>
<string name="label222">snake</string>
<string name="label223">snowflake</string>
<string name="label224">snowman</string>
<string name="label225">soccer ball</string>
<string name="label226">sock</string>
<string name="label227">speedboat</string>
<string name="label228">spider</string>
<string name="label229">spoon</string>
<string name="label230">spreadsheet</string>
<string name="label231">square</string>
<string name="label232">squirrel</string>
<string name="label233">stairs</string>
<string name="label234">star</string>
<string name="label235">stethoscope</string>
<string name="label236">stop sign</string>
<string name="label237">strawberry</string>
<string name="label238">string bean</string>
<string name="label239">submarine</string>
<string name="label240">suitcase</string>
<string name="label241">sun</string>
<string name="label242">swan</string>
<string name="label243">sweater</string>
<string name="label244">sword</string>
<string name="label245">syringe</string>
<string name="label246">table</string>
<string name="label247">teapot</string>
<string name="label248">teddy-bear</string>
<string name="label249">telephone</string>
<string name="label250">television</string>
<string name="label251">tennis racquet</string>
<string name="label252">tent</string>
<string name="label253">The Eiffel Tower</string>
<string name="label254">The Great Wall of China</string>
<string name="label255">The Mona Lisa</string>
<string name="label256">tiger</string>
<string name="label257">toilet</string>
<string name="label258">tooth</string>
<string name="label259">toothbrush</string>
<string name="label260">toothpaste</string>
<string name="label261">tornado</string>
<string name="label262">traffic light</string>
<string name="label263">train</string>
<string name="label264">tree</string>
<string name="label265">trombone</string>
<string name="label266">t-shirt</string>
<string name="label267">umbrella</string>
<string name="label268">underwear</string>
<string name="label269">vase</string>
<string name="label270">violin</string>
</resources>